// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testuser Error when storing test user without test token 1`] = `
{
  "data": {
    "test": {
      "user": "Not a valid test token",
    },
  },
}
`;

exports[`Testuser can store test user 1`] = `
{
  "data": {
    "test": {
      "user": {
        "accounts": [
          {
            "agency": {
              "agencyId": "716300",
              "agencyName": "Herlev Bibliotek",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": "100",
            "isMunicipality": true,
            "uniqueId": "test:00000000-0000-4000-8000-000000000001",
          },
          {
            "agency": {
              "agencyId": "715100",
              "agencyName": "Ballerup Bibliotekerne",
            },
            "blocked": false,
            "cpr": null,
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:00000000-0000-4000-8000-000000000001",
          },
          {
            "agency": {
              "agencyId": "190101",
              "agencyName": "bibliotek.dk",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:00000000-0000-4000-8000-000000000001",
          },
        ],
      },
    },
  },
}
`;

exports[`Testuser parser can parse test token 1`] = `
{
  "accessToken": "d66828f989e1184g0d51g1dcdf9d9985ecdcb6ed",
  "testUser": {
    "key": "kfu",
    "loginAgency": "nemlogin",
  },
}
`;

exports[`Testuser test user can be fetched 1`] = `
{
  "data": {
    "test": {
      "user": {
        "accounts": [
          {
            "agency": {
              "agencyId": "190101",
              "agencyName": "bibliotek.dk",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:00000000-0000-4000-8000-000000000001",
          },
        ],
      },
    },
  },
}
`;

exports[`Testuser test user is null without test token 1`] = `
{
  "data": {
    "test": {
      "user": null,
    },
  },
}
`;
